namespace AdvanceWars.Runtime
{
    public class Player
    {
        public string Id { get; init; }
    }
}