@startuml
skin rose

class Propulsion <<(T, Orange)>>
class Terrain{
    +defensiveRating: int {[0,5]}
    +MoveCostOf(:Propulsion): int
}
class Building <<(T, Orange)>>
class Battalion{
    +forces: int
}
class Unit <<(T, Orange)>>
class MovementRate <<(T, Orange)>>
class Nation <<(T, Orange)>>
class Map
class Space
class Coord <<(T, orange)>>
class Armor <<(T, Orange)>>
class Weapon <<(T, Orange)>>
class Allegiance
class Spawner


package Operation
{
class Game
class Operation
class Player
}
package Orders{
class Nation <<(T, Orange)>>
class Tactic <<(T, Orange)>>
class Maneuver
class CommandingOfficer
class Situation
class Treasury
}

package Fire{
class Combat
class Offensive{
+Damage: int
}
class TheaterOps
}

Unit --> Propulsion
Unit --> MovementRate
Unit --> Armor
Map +-- Space
(Map, Space) .. Coord
Space --> Terrain
Terrain --> Propulsion : costs
Terrain -up-|> Allegiance
Battalion --> Nation
Battalion -up-|> Allegiance 
Allegiance --> Nation
Space o-- Battalion : 0..1
Battalion --> Unit
Property -u-|> Terrain
Property --> Building
Unit --> Weapon
Weapon --> Armor : damagesTo
Spawner -up-|> Property

Offensive o--- "2" Battalion : attacker\ndefender
Offensive o--- Terrain : battlefield

CommandingOfficer o-- "0..*" Maneuver
CommandingOfficer *-> Situation
CommandingOfficer ..> Allegiance
CommandingOfficer ..> Tactic

Situation --> Map
Situation --> Treasury
Situation ..> Space

Maneuver o-- Allegiance : performer
Maneuver --> Tactic
Maneuver ..> Situation

Unit ..> Tactic : ¿? (cycle)

Combat *.. "2" Offensive : attack\ncounterattack
Combat *-- "2" TheaterOps : attacking\ndefending

TheaterOps --> Terrain : battlefield
TheaterOps --> Battalion : troops

Game *--> Operation
Game "1..n" *--> Player
Operation "1..n" *--> CommandingOfficer


@enduml